--- a/Martin/package.json
+++ b/Martin/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.0.9",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
+    "expo-cli": "^4.12.5",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
