--- a/Martin/app.json
+++ b/Martin/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "Martin",
-    "slug": "Martin",
-    "version": "1.0.0",
+    "name": "MartinApp",
+    "slug": "MartinApp",
+    "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/appstore.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -20,10 +20,9 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "package": "com.yourcompany.yourappname",
+      "versionCode": 1
+      
     },
     "web": {
       "favicon": "./assets/favicon.png"
