--- a/Martin/package.json
+++ b/Martin/package.json
@@ -9,33 +9,34 @@
   },
   "dependencies": {
     "@react-native-community/picker": "^1.8.1",
-    "@react-native-picker/picker": "^2.1.0",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
     "axios": "^0.22.0",
-    "expo": "~42.0.1",
+    "expo": "^43.0.0",
     "expo-cli": "^4.12.5",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "0.14.10",
-    "react-native-web": "^0.17.5",
+    "react-native-screens": "~3.8.0",
+    "react-native-unimodules": "~0.15.0",
+    "react-native-web": "0.17.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
